# cpp-ppm-image-lib

./: .gitignore  CMakeLists.txt  README.md
Cypher/: -DCMAKE_BUILD_TYPE=Debug  CMakeLists.txt  Makefile  cmake_install.cmake  cypher  main.cpp
ImgLib/: CMakeLists.txt  img_lib.cpp  ppm_image.cpp
ImgLib/include/: img_lib.h  ppm_image.h
build-release/: Makefile  cmake_install.cmake
src/: hmirr.cpp  main.cpp  sobel.cpp  vmirr.cpp
